# kanban

./: .env.example  API.md  DESIGN.md  Dockerfile  README.md  STATUS.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Cargo.toml  llms.txt  openapi.json
backend/src/: access.rs  auth.rs  catchers.rs  db.rs  events.rs  lib.rs  main.rs  models.rs  rate_limit.rs  routes.rs  webhooks.rs
backend/tests/: http_test.rs  integration_test.rs
frontend/: index.html
frontend/src/: App.jsx  api.js
