[package]
name = "kanban"
version = "0.1.0"
edition = "2021"
description = "Agent-first Kanban board with full REST API for multi-agent task coordination"
license = "MIT"

[lib]
name = "kanban"
path = "src/lib.rs"

[[bin]]
name = "kanban"
path = "src/main.rs"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rocket_cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
hex = "0.4"

# Pin time crate to avoid MSRV 1.88 requirement (time-core 0.1.8+ needs edition2024)
time = ">=0.3.20, <0.3.42"
